// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log entries service when creating a new log entry will create a new log entry with all options 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 1210,
      "hePercent": undefined,
      "material": "fe",
      "name": "ornate parcel",
      "o2Percent": 25.6,
      "pressureUnit": "psi",
      "startPressure": 3470,
      "volume": 12,
      "workingPressure": 3000,
    },
  ],
  "conditions": {
    "airTemperature": 28,
    "bottomTemperature": 24,
    "chop": 2,
    "current": 3,
    "surfaceTemperature": 26,
    "temperatureUnit": "C",
    "visibility": 4.8,
    "weather": "Sunny with some clouds",
  },
  "createdAt": 2024-07-23T11:39:57.073Z,
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": 1582583450944,
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "averageDepth": 45,
    "depthUnit": "ft",
    "maxDepth": 67,
  },
  "equipment": {
    "boots": true,
    "camera": false,
    "exposureSuit": "drysuit",
    "gloves": true,
    "hood": true,
    "scooter": false,
    "torch": false,
    "trimCorrectness": "good",
    "weight": 4.4,
    "weightCorrectness": "over",
    "weightUnit": "kg",
  },
  "id": "3e238287-519a-4a65-bc57-afe0c6cd9ced",
  "logNumber": 123,
  "notes": "Great dive! Saw fish.",
  "site": undefined,
  "tags": [],
  "timing": {
    "bottomTime": 2880,
    "duration": 3120,
    "entryTime": 1711647900000,
    "timezone": "Europe/Amsterdam",
  },
  "updatedAt": 2024-07-23T14:22:09.372Z,
}
`;

exports[`Log entries service when listing log entries will perform a basic search 1`] = `
[
  {
    "air": [],
    "entryTime": 2024-12-11T18:54:16.993Z,
    "id": "ed072537-423a-4d14-89b3-6851c9009eb7",
    "site": "humming past mathematics",
    "timezone": "Asia/Kolkata",
  },
  {
    "air": [],
    "entryTime": 2024-12-10T00:43:52.099Z,
    "id": "14855a1f-5a9d-4904-83df-4dc9cb479b70",
    "site": "remarkable unique shoelace",
    "timezone": "Asia/Samarkand",
  },
  {
    "air": [],
    "entryTime": 2024-12-09T16:29:49.763Z,
    "id": "7be7ad19-c083-4c28-8c87-6808d8f5bcfb",
    "site": "cluttered frizzy stylus",
    "timezone": "Europe/Simferopol",
  },
  {
    "air": [],
    "entryTime": 2024-12-06T03:41:17.445Z,
    "id": "522e29a5-3a94-48ea-92a9-75bcb5e0dad7",
    "site": "wise gullible administrator",
    "timezone": "Europe/Budapest",
  },
  {
    "air": [],
    "entryTime": 2024-12-04T16:08:31.217Z,
    "id": "cfbe9a05-8fbd-46e9-a655-0083eebe5949",
    "site": "mild mixed crewman",
    "timezone": "America/Paramaribo",
  },
  {
    "air": [],
    "entryTime": 2024-12-03T21:32:56.266Z,
    "id": "f19a4a8e-5928-4bb6-8ee3-f980f1dea45e",
    "site": "deadly idealistic gerbil",
    "timezone": "Asia/Anadyr",
  },
  {
    "air": [],
    "entryTime": 2024-11-30T04:40:35.930Z,
    "id": "217a32f7-c249-430a-8a5a-670a9d862c93",
    "site": "specific infinite chalice",
    "timezone": "Asia/Yerevan",
  },
  {
    "air": [],
    "entryTime": 2024-11-25T16:47:07.828Z,
    "id": "7c998dd4-1203-4f46-ad6e-58621cc7451f",
    "site": "cruel wealthy lieu",
    "timezone": "Africa/Maputo",
  },
  {
    "air": [],
    "entryTime": 2024-11-23T11:30:43.580Z,
    "id": "3b71f0e9-7a09-4b0f-8a1d-55453fbca1d9",
    "site": "flamboyant old mate",
    "timezone": "Europe/Berlin",
  },
  {
    "air": [],
    "entryTime": 2024-11-21T19:33:18.695Z,
    "id": "266423f9-7824-4a59-80dc-7707bf3ff57d",
    "site": "exotic warmhearted aside",
    "timezone": "Africa/Lagos",
  },
  {
    "air": [],
    "entryTime": 2024-11-21T14:29:00.737Z,
    "id": "9a205586-e2b9-444e-a869-bd261d32efbe",
    "site": "spotless gifted gallon",
    "timezone": "America/Tortola",
  },
  {
    "air": [],
    "entryTime": 2024-11-21T03:56:30.184Z,
    "id": "9f5cc359-6672-4248-af2c-2810c8498684",
    "site": "lazy winged conscience",
    "timezone": "Asia/Brunei",
  },
  {
    "air": [],
    "entryTime": 2024-11-17T12:27:11.094Z,
    "id": "17db36a9-a27a-4e16-83dd-425e647e0773",
    "site": "frugal monstrous title",
    "timezone": "America/Caracas",
  },
  {
    "air": [],
    "entryTime": 2024-11-16T12:56:20.090Z,
    "id": "d2dcb57f-d686-4506-8312-d59f18cc91ef",
    "site": "frizzy excited outback",
    "timezone": "America/Antigua",
  },
  {
    "air": [],
    "entryTime": 2024-11-11T03:22:38.496Z,
    "id": "62f2d18c-901a-4831-a69d-426922dd40ab",
    "site": "voluminous heartfelt imprisonment",
    "timezone": "America/Marigot",
  },
  {
    "air": [],
    "entryTime": 2024-11-09T06:29:59.953Z,
    "id": "e38c3ef1-a861-494a-b017-56f8fbbf5acd",
    "site": "good-natured bountiful relay",
    "timezone": "Asia/Choibalsan",
  },
  {
    "air": [],
    "entryTime": 2024-10-27T03:36:42.041Z,
    "id": "d843f325-698e-4e10-bba3-efb13b557127",
    "site": "dark heavy boss",
    "timezone": "Asia/Taipei",
  },
  {
    "air": [],
    "entryTime": 2024-10-25T19:42:43.197Z,
    "id": "4c9493d1-4763-4283-b14d-3fd44b69998e",
    "site": "unwelcome exemplary alpaca",
    "timezone": "Asia/Srednekolymsk",
  },
  {
    "air": [],
    "entryTime": 2024-10-25T07:26:33.382Z,
    "id": "2e71637f-3859-45a0-b076-18f56add7a13",
    "site": "gentle careless sequence",
    "timezone": "Europe/Berlin",
  },
  {
    "air": [],
    "entryTime": 2024-10-23T18:01:39.056Z,
    "id": "5b7d3fdf-3aa3-4ae6-bcf9-e08e42f052c6",
    "site": "frequent realistic paramedic",
    "timezone": "Asia/Tomsk",
  },
  {
    "air": [],
    "entryTime": 2024-10-21T13:48:32.071Z,
    "id": "1efc00ba-cc42-44a3-9986-45769586ac09",
    "site": "knowledgeable oily sweatshirt",
    "timezone": "Africa/Kinshasa",
  },
  {
    "air": [],
    "entryTime": 2024-10-16T03:30:04.365Z,
    "id": "20a9a522-7cd0-4e8e-802b-14b397e9aa64",
    "site": "other necessary fedora",
    "timezone": "Europe/Podgorica",
  },
  {
    "air": [],
    "entryTime": 2024-10-15T12:02:45.039Z,
    "id": "d8f22656-7784-4734-9701-9d35c69cfa83",
    "site": "safe welcome designation",
    "timezone": "Africa/Sao_Tome",
  },
  {
    "air": [],
    "entryTime": 2024-10-13T04:15:27.157Z,
    "id": "9cc2da23-72fe-4444-a26f-7c2f4bac1d52",
    "site": "rude ajar aggradation",
    "timezone": "America/Argentina/Jujuy",
  },
  {
    "air": [],
    "entryTime": 2024-10-13T02:01:41.647Z,
    "id": "941cd2ba-489c-4e9b-9ff3-e92ce11c7f34",
    "site": "acidic similar juggernaut",
    "timezone": "Australia/Eucla",
  },
  {
    "air": [],
    "entryTime": 2024-10-12T20:42:35.830Z,
    "id": "72951077-8d09-42e1-9275-7250e63972e7",
    "site": "intelligent powerful breakpoint",
    "timezone": "Atlantic/Cape_Verde",
  },
  {
    "air": [],
    "entryTime": 2024-10-03T20:49:06.116Z,
    "id": "6e7812db-fce4-44a8-a9d2-fb0bd8a9f659",
    "site": "mild mixed crewman",
    "timezone": "Asia/Pyongyang",
  },
  {
    "air": [],
    "entryTime": 2024-09-28T00:47:30.581Z,
    "id": "30a316cd-82f4-4c01-8b5b-d87dfcc56560",
    "site": "impolite hungry hunt",
    "timezone": "Pacific/Easter",
  },
  {
    "air": [],
    "entryTime": 2024-09-21T03:39:29.288Z,
    "id": "126f2417-13e9-4c2e-acdd-b9998650728a",
    "site": "unsightly kaleidoscopic web",
    "timezone": "Asia/Jakarta",
  },
  {
    "air": [],
    "entryTime": 2024-09-20T06:20:17.641Z,
    "id": "7b19035d-4347-438f-b9ec-abec0a9d4de7",
    "site": "specific infinite chalice",
    "timezone": "America/Havana",
  },
  {
    "air": [],
    "entryTime": 2024-09-17T09:27:27.817Z,
    "id": "1910f8fc-9c4d-49b0-bbc0-d30cfcaa3bd1",
    "site": "internal crisp trove",
    "timezone": "Antarctica/Palmer",
  },
  {
    "air": [],
    "entryTime": 2024-09-17T03:02:42.373Z,
    "id": "6696cb4e-5004-4395-ad86-0f62f55f027b",
    "site": "definitive tart hierarchy",
    "timezone": "America/Kralendijk",
  },
  {
    "air": [],
    "entryTime": 2024-09-12T02:54:14.534Z,
    "id": "dc29c094-dcb1-4449-8689-8648315fc73d",
    "site": "apt pastel moai",
    "timezone": "America/Cambridge_Bay",
  },
  {
    "air": [],
    "entryTime": 2024-09-07T00:50:44.602Z,
    "id": "a9732edf-d509-4f12-aa25-7f25b69a973f",
    "site": "frozen extra-small freezing",
    "timezone": "America/Cayman",
  },
  {
    "air": [],
    "entryTime": 2024-09-05T15:37:19.295Z,
    "id": "88a357de-eec6-4be6-851d-5bdd7af01aeb",
    "site": "whirlwind deafening concept",
    "timezone": "America/Fortaleza",
  },
  {
    "air": [],
    "entryTime": 2024-09-04T09:32:31.763Z,
    "id": "bd6e62c1-2d0c-4fec-b803-4868fd016c2d",
    "site": "modern sorrowful girdle",
    "timezone": "Europe/Skopje",
  },
  {
    "air": [],
    "entryTime": 2024-09-02T10:59:02.004Z,
    "id": "19f5a4ff-cc77-4956-932a-d135d784eda9",
    "site": "dazzling easy-going shortwave",
    "timezone": "America/Dawson",
  },
  {
    "air": [],
    "entryTime": 2024-08-27T16:34:23.109Z,
    "id": "71d34458-c1df-4090-9400-ddb8c7a81c21",
    "site": "thoughtful lumpy quotation",
    "timezone": "Europe/Oslo",
  },
  {
    "air": [],
    "entryTime": 2024-08-24T12:18:29.681Z,
    "id": "34244a4c-e2f9-4321-8b9e-79930e6471ee",
    "site": "aggravating unhappy vest",
    "timezone": "Asia/Damascus",
  },
  {
    "air": [],
    "entryTime": 2024-08-21T21:10:22.203Z,
    "id": "8c681da5-d22a-4a98-938f-9de416a0beff",
    "site": "tattered rigid forever",
    "timezone": "Africa/Douala",
  },
  {
    "air": [],
    "entryTime": 2024-08-15T09:45:48.982Z,
    "id": "adcb2ff5-e086-42dd-9e35-f2443bfab8f4",
    "site": "damp forsaken chapter",
    "timezone": "America/Montserrat",
  },
  {
    "air": [],
    "entryTime": 2024-08-15T09:34:31.828Z,
    "id": "cc80f224-44b1-48f0-94ac-a7ee516afaef",
    "site": "funny substantial strength",
    "timezone": "Asia/Pyongyang",
  },
  {
    "air": [],
    "entryTime": 2024-08-07T19:00:55.591Z,
    "id": "bdf818ca-03d5-402c-b294-0919ca512a8a",
    "site": "original pitiful resource",
    "timezone": "America/Blanc-Sablon",
  },
  {
    "air": [],
    "entryTime": 2024-08-05T22:13:37.798Z,
    "id": "62179aed-2b7f-4a22-b5dc-03ede91e6899",
    "site": "second pleasing berry",
    "timezone": "Pacific/Bougainville",
  },
  {
    "air": [],
    "entryTime": 2024-07-29T04:04:21.198Z,
    "id": "302b87f6-f7f9-4360-bef4-a608e0d49d5b",
    "site": "agitated high field",
    "timezone": "Indian/Mahe",
  },
  {
    "air": [],
    "entryTime": 2024-07-23T08:02:48.538Z,
    "id": "e9ef1b9c-c5b7-4d2e-a38c-b18fca833c68",
    "site": "quiet complete current",
    "timezone": "Antarctica/Casey",
  },
  {
    "air": [],
    "entryTime": 2024-07-20T23:00:30.460Z,
    "id": "74020122-72c9-4c37-8761-36622f65b99c",
    "site": "silky sharp brilliant",
    "timezone": "America/Cambridge_Bay",
  },
  {
    "air": [],
    "entryTime": 2024-07-17T08:06:13.415Z,
    "id": "c6a03fac-69a9-42d4-b312-acab4d4c0edd",
    "site": "silky dental dragon",
    "timezone": "America/St_Johns",
  },
  {
    "air": [],
    "entryTime": 2024-07-13T09:45:06.004Z,
    "id": "9274467f-4fef-4a57-80d1-680aace83f0f",
    "site": "offensive monumental teapot",
    "timezone": "Atlantic/Stanley",
  },
  {
    "air": [],
    "entryTime": 2024-07-11T23:11:34.351Z,
    "id": "9089e0ec-e876-4bb1-96f0-bea1bb1cab4d",
    "site": "sharp vicious minibus",
    "timezone": "America/Mexico_City",
  },
]
`;

exports[`Log entries service when listing log entries will perform a search for log entries after a start date 1`] = `
{
  "data": [
    {
      "entryTime": 2024-12-11T18:54:16.993Z,
      "id": "ed072537-423a-4d14-89b3-6851c9009eb7",
      "site": "humming past mathematics",
    },
    {
      "entryTime": 2024-12-10T00:43:52.099Z,
      "id": "14855a1f-5a9d-4904-83df-4dc9cb479b70",
      "site": "remarkable unique shoelace",
    },
    {
      "entryTime": 2024-12-09T16:29:49.763Z,
      "id": "7be7ad19-c083-4c28-8c87-6808d8f5bcfb",
      "site": "cluttered frizzy stylus",
    },
    {
      "entryTime": 2024-12-06T03:41:17.445Z,
      "id": "522e29a5-3a94-48ea-92a9-75bcb5e0dad7",
      "site": "wise gullible administrator",
    },
    {
      "entryTime": 2024-12-04T16:08:31.217Z,
      "id": "cfbe9a05-8fbd-46e9-a655-0083eebe5949",
      "site": "mild mixed crewman",
    },
    {
      "entryTime": 2024-12-03T21:32:56.266Z,
      "id": "f19a4a8e-5928-4bb6-8ee3-f980f1dea45e",
      "site": "deadly idealistic gerbil",
    },
    {
      "entryTime": 2024-11-30T04:40:35.930Z,
      "id": "217a32f7-c249-430a-8a5a-670a9d862c93",
      "site": "specific infinite chalice",
    },
    {
      "entryTime": 2024-11-25T16:47:07.828Z,
      "id": "7c998dd4-1203-4f46-ad6e-58621cc7451f",
      "site": "cruel wealthy lieu",
    },
    {
      "entryTime": 2024-11-23T11:30:43.580Z,
      "id": "3b71f0e9-7a09-4b0f-8a1d-55453fbca1d9",
      "site": "flamboyant old mate",
    },
    {
      "entryTime": 2024-11-21T19:33:18.695Z,
      "id": "266423f9-7824-4a59-80dc-7707bf3ff57d",
      "site": "exotic warmhearted aside",
    },
    {
      "entryTime": 2024-11-21T14:29:00.737Z,
      "id": "9a205586-e2b9-444e-a869-bd261d32efbe",
      "site": "spotless gifted gallon",
    },
    {
      "entryTime": 2024-11-21T03:56:30.184Z,
      "id": "9f5cc359-6672-4248-af2c-2810c8498684",
      "site": "lazy winged conscience",
    },
    {
      "entryTime": 2024-11-17T12:27:11.094Z,
      "id": "17db36a9-a27a-4e16-83dd-425e647e0773",
      "site": "frugal monstrous title",
    },
    {
      "entryTime": 2024-11-16T12:56:20.090Z,
      "id": "d2dcb57f-d686-4506-8312-d59f18cc91ef",
      "site": "frizzy excited outback",
    },
    {
      "entryTime": 2024-11-11T03:22:38.496Z,
      "id": "62f2d18c-901a-4831-a69d-426922dd40ab",
      "site": "voluminous heartfelt imprisonment",
    },
  ],
  "totalCount": 138,
}
`;

exports[`Log entries service when listing log entries will perform a search for log entries before an end date 1`] = `
{
  "data": [
    {
      "entryTime": 2023-09-30T23:45:02.566Z,
      "id": "a323ead5-a55b-4624-b238-58f092781c8e",
      "site": "illustrious clueless supervisor",
    },
    {
      "entryTime": 2023-09-30T03:36:24.965Z,
      "id": "92bd0414-4cbe-446d-8df0-953611b3d79d",
      "site": "bustling normal convert",
    },
    {
      "entryTime": 2023-09-24T12:07:55.727Z,
      "id": "8e2342b7-6bf9-4c56-8908-66bf9abd55fe",
      "site": "avaricious flamboyant subtitle",
    },
    {
      "entryTime": 2023-09-24T02:06:27.156Z,
      "id": "0965314e-ac8f-4fdb-a188-91599fef0a5d",
      "site": "belated turbulent koala",
    },
    {
      "entryTime": 2023-09-21T20:44:52.696Z,
      "id": "c4353406-f438-4731-abd1-3cd00586d7d0",
      "site": "snarling round astrolabe",
    },
    {
      "entryTime": 2023-09-11T20:26:17.955Z,
      "id": "32f0eac5-4402-475e-bad9-e70f9e10dbc4",
      "site": "major limping airbag",
    },
    {
      "entryTime": 2023-09-09T03:57:34.209Z,
      "id": "9833ce6a-7ea3-45c7-8361-18cd857c0b98",
      "site": "carefree fussy crewman",
    },
    {
      "entryTime": 2023-09-08T10:06:20.673Z,
      "id": "46637844-9a07-42be-8e2b-1c2469a763af",
      "site": "sniveling weepy temporariness",
    },
    {
      "entryTime": 2023-09-07T18:10:38.644Z,
      "id": "90f69dc6-46ad-49a6-8d6d-213b83235613",
      "site": "impeccable overcooked soybean",
    },
    {
      "entryTime": 2023-09-07T16:03:10.698Z,
      "id": "a8578a1e-d5be-4384-ad05-bfdf4d6890e9",
      "site": "alert awesome intuition",
    },
    {
      "entryTime": 2023-09-05T18:43:40.524Z,
      "id": "f19fa59c-eb4e-4462-b2d1-5402a8642e76",
      "site": "wasteful hollow corn",
    },
    {
      "entryTime": 2023-09-04T10:22:04.013Z,
      "id": "032a2033-8c2b-4c97-a667-c25bb7605031",
      "site": "delightful female toad",
    },
    {
      "entryTime": 2023-08-26T09:49:09.454Z,
      "id": "93533d3a-9d24-4cea-928d-bb86fafd846f",
      "site": "far-off critical machine",
    },
    {
      "entryTime": 2023-08-21T17:47:10.325Z,
      "id": "9d63e6e4-3144-42ad-9828-39a9575350f1",
      "site": "voluminous heartfelt imprisonment",
    },
    {
      "entryTime": 2023-08-19T07:50:07.330Z,
      "id": "ea4a01cf-afb1-4b02-908d-2425cfb9ad10",
      "site": "silky sharp brilliant",
    },
  ],
  "totalCount": 174,
}
`;

exports[`Log entries service when listing log entries will perform a search for log entries belonging to a specific diver 1`] = `
{
  "data": [
    {
      "entryTime": 2024-12-11T18:54:16.993Z,
      "id": "ed072537-423a-4d14-89b3-6851c9009eb7",
      "owner": "Ayla.Rippin",
      "site": "humming past mathematics",
    },
    {
      "entryTime": 2024-12-10T00:43:52.099Z,
      "id": "14855a1f-5a9d-4904-83df-4dc9cb479b70",
      "owner": "Ayla.Rippin",
      "site": "remarkable unique shoelace",
    },
    {
      "entryTime": 2024-11-30T04:40:35.930Z,
      "id": "217a32f7-c249-430a-8a5a-670a9d862c93",
      "owner": "Ayla.Rippin",
      "site": "specific infinite chalice",
    },
    {
      "entryTime": 2024-11-21T19:33:18.695Z,
      "id": "266423f9-7824-4a59-80dc-7707bf3ff57d",
      "owner": "Ayla.Rippin",
      "site": "exotic warmhearted aside",
    },
    {
      "entryTime": 2024-11-21T14:29:00.737Z,
      "id": "9a205586-e2b9-444e-a869-bd261d32efbe",
      "owner": "Ayla.Rippin",
      "site": "spotless gifted gallon",
    },
    {
      "entryTime": 2024-11-11T03:22:38.496Z,
      "id": "62f2d18c-901a-4831-a69d-426922dd40ab",
      "owner": "Ayla.Rippin",
      "site": "voluminous heartfelt imprisonment",
    },
    {
      "entryTime": 2024-11-09T06:29:59.953Z,
      "id": "e38c3ef1-a861-494a-b017-56f8fbbf5acd",
      "owner": "Ayla.Rippin",
      "site": "good-natured bountiful relay",
    },
    {
      "entryTime": 2024-10-23T18:01:39.056Z,
      "id": "5b7d3fdf-3aa3-4ae6-bcf9-e08e42f052c6",
      "owner": "Ayla.Rippin",
      "site": "frequent realistic paramedic",
    },
    {
      "entryTime": 2024-10-13T04:15:27.157Z,
      "id": "9cc2da23-72fe-4444-a26f-7c2f4bac1d52",
      "owner": "Ayla.Rippin",
      "site": "rude ajar aggradation",
    },
    {
      "entryTime": 2024-09-20T06:20:17.641Z,
      "id": "7b19035d-4347-438f-b9ec-abec0a9d4de7",
      "owner": "Ayla.Rippin",
      "site": "specific infinite chalice",
    },
    {
      "entryTime": 2024-09-04T09:32:31.763Z,
      "id": "bd6e62c1-2d0c-4fec-b803-4868fd016c2d",
      "owner": "Ayla.Rippin",
      "site": "modern sorrowful girdle",
    },
    {
      "entryTime": 2024-08-21T21:10:22.203Z,
      "id": "8c681da5-d22a-4a98-938f-9de416a0beff",
      "owner": "Ayla.Rippin",
      "site": "tattered rigid forever",
    },
    {
      "entryTime": 2024-08-15T09:45:48.982Z,
      "id": "adcb2ff5-e086-42dd-9e35-f2443bfab8f4",
      "owner": "Ayla.Rippin",
      "site": "damp forsaken chapter",
    },
    {
      "entryTime": 2024-08-15T09:34:31.828Z,
      "id": "cc80f224-44b1-48f0-94ac-a7ee516afaef",
      "owner": "Ayla.Rippin",
      "site": "funny substantial strength",
    },
    {
      "entryTime": 2024-08-07T19:00:55.591Z,
      "id": "bdf818ca-03d5-402c-b294-0919ca512a8a",
      "owner": "Ayla.Rippin",
      "site": "original pitiful resource",
    },
    {
      "entryTime": 2024-07-20T23:00:30.460Z,
      "id": "74020122-72c9-4c37-8761-36622f65b99c",
      "owner": "Ayla.Rippin",
      "site": "silky sharp brilliant",
    },
    {
      "entryTime": 2024-06-06T07:52:20.600Z,
      "id": "03dfa322-9d45-45e7-beec-c7d85face253",
      "owner": "Ayla.Rippin",
      "site": "sympathetic mortified taxicab",
    },
    {
      "entryTime": 2024-06-01T21:44:31.035Z,
      "id": "669333a9-575f-40d1-9fef-945936cbf473",
      "owner": "Ayla.Rippin",
      "site": "giant broken meat",
    },
    {
      "entryTime": 2024-05-26T19:06:40.946Z,
      "id": "50b754cb-5ee1-4c31-8c5f-b0178a1fdd27",
      "owner": "Ayla.Rippin",
      "site": "meaty weird good",
    },
    {
      "entryTime": 2024-05-06T21:27:47.283Z,
      "id": "2933b80f-9e32-4d2a-9b8a-0dd281e2c001",
      "owner": "Ayla.Rippin",
      "site": "bold staid lode",
    },
  ],
  "totalCount": 75,
}
`;

exports[`Log entries service when listing log entries will perform a search for log entries between a start date and end date 1`] = `
{
  "data": [
    {
      "entryTime": 2023-09-30T23:45:02.566Z,
      "id": "a323ead5-a55b-4624-b238-58f092781c8e",
      "site": "illustrious clueless supervisor",
    },
    {
      "entryTime": 2023-09-30T03:36:24.965Z,
      "id": "92bd0414-4cbe-446d-8df0-953611b3d79d",
      "site": "bustling normal convert",
    },
    {
      "entryTime": 2023-09-24T12:07:55.727Z,
      "id": "8e2342b7-6bf9-4c56-8908-66bf9abd55fe",
      "site": "avaricious flamboyant subtitle",
    },
    {
      "entryTime": 2023-09-24T02:06:27.156Z,
      "id": "0965314e-ac8f-4fdb-a188-91599fef0a5d",
      "site": "belated turbulent koala",
    },
    {
      "entryTime": 2023-09-21T20:44:52.696Z,
      "id": "c4353406-f438-4731-abd1-3cd00586d7d0",
      "site": "snarling round astrolabe",
    },
    {
      "entryTime": 2023-09-11T20:26:17.955Z,
      "id": "32f0eac5-4402-475e-bad9-e70f9e10dbc4",
      "site": "major limping airbag",
    },
    {
      "entryTime": 2023-09-09T03:57:34.209Z,
      "id": "9833ce6a-7ea3-45c7-8361-18cd857c0b98",
      "site": "carefree fussy crewman",
    },
    {
      "entryTime": 2023-09-08T10:06:20.673Z,
      "id": "46637844-9a07-42be-8e2b-1c2469a763af",
      "site": "sniveling weepy temporariness",
    },
    {
      "entryTime": 2023-09-07T18:10:38.644Z,
      "id": "90f69dc6-46ad-49a6-8d6d-213b83235613",
      "site": "impeccable overcooked soybean",
    },
    {
      "entryTime": 2023-09-07T16:03:10.698Z,
      "id": "a8578a1e-d5be-4384-ad05-bfdf4d6890e9",
      "site": "alert awesome intuition",
    },
    {
      "entryTime": 2023-09-05T18:43:40.524Z,
      "id": "f19fa59c-eb4e-4462-b2d1-5402a8642e76",
      "site": "wasteful hollow corn",
    },
    {
      "entryTime": 2023-09-04T10:22:04.013Z,
      "id": "032a2033-8c2b-4c97-a667-c25bb7605031",
      "site": "delightful female toad",
    },
  ],
  "totalCount": 12,
}
`;

exports[`Log entries service when listing log entries will perform a search with pagination 1`] = `
{
  "data": [
    {
      "entryTime": 2024-07-10T03:30:07.606Z,
      "id": "3620ee8b-7977-4bc0-9f30-dbc0b16535d5",
      "site": "defiant thorny knife-edge",
    },
    {
      "entryTime": 2024-07-08T20:50:08.111Z,
      "id": "f5c49932-b6b8-4ce8-ad2a-0f38b32adef1",
      "site": "stormy strict fries",
    },
    {
      "entryTime": 2024-06-27T09:54:01.988Z,
      "id": "5cd73fbe-3a56-4d9f-8fd3-bb25b7d29151",
      "site": "tattered worn graffiti",
    },
    {
      "entryTime": 2024-06-23T01:59:05.983Z,
      "id": "822e216d-f00c-425f-9e24-49659cae1c00",
      "site": "wonderful useful magnet",
    },
    {
      "entryTime": 2024-06-21T09:26:46.237Z,
      "id": "e3988bce-8ec1-42a3-9930-53bdf26b6899",
      "site": "friendly criminal waffle",
    },
    {
      "entryTime": 2024-06-10T00:34:38.763Z,
      "id": "cef7693a-0d42-4721-a61d-d513e86634e1",
      "site": "opulent violent boolean",
    },
    {
      "entryTime": 2024-06-07T21:12:52.544Z,
      "id": "142fc2db-3d8e-4edc-bd6b-62176e84be90",
      "site": "untidy puzzled birth",
    },
    {
      "entryTime": 2024-06-06T07:52:20.600Z,
      "id": "03dfa322-9d45-45e7-beec-c7d85face253",
      "site": "sympathetic mortified taxicab",
    },
    {
      "entryTime": 2024-06-06T04:30:18.486Z,
      "id": "a56323d2-b9b3-4531-bf5a-4d8086fcaad2",
      "site": "courageous blaring volume",
    },
    {
      "entryTime": 2024-06-01T21:44:31.035Z,
      "id": "669333a9-575f-40d1-9fef-945936cbf473",
      "site": "giant broken meat",
    },
  ],
  "total": 300,
}
`;

exports[`Log entries service when listing log entries will sort log entries by "entryTime" in "asc" order 1`] = `
[
  {
    "entryTime": 2022-01-01T14:44:04.027Z,
    "id": "b32bc46f-5f36-407a-bfb5-2db9f744c6e1",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": 2022-01-04T09:31:02.206Z,
    "id": "84a4bfe1-eb7c-42ed-a0c1-4e63d0e4abbb",
    "site": "neat darling tip",
  },
  {
    "entryTime": 2022-01-10T05:04:50.414Z,
    "id": "8024885b-af40-4cf9-9609-8cfa0e9cbe07",
    "site": "meaty weird good",
  },
  {
    "entryTime": 2022-01-17T07:21:11.559Z,
    "id": "146566d8-0c2f-4e36-a836-ce829eea6eb9",
    "site": "fearless passionate phone",
  },
  {
    "entryTime": 2022-01-17T09:45:49.179Z,
    "id": "2902b2d4-d645-4181-bdec-bfb0930607ca",
    "site": "bold talkative cymbal",
  },
  {
    "entryTime": 2022-01-18T12:08:19.536Z,
    "id": "e8800b8a-b256-4cac-9d18-d19da9a1082c",
    "site": "humble crazy cockpit",
  },
  {
    "entryTime": 2022-01-19T13:46:57.251Z,
    "id": "1b022c2c-eb6f-4b47-97b5-61dd1af2c8e4",
    "site": "concerned specific printing",
  },
  {
    "entryTime": 2022-01-22T05:14:05.244Z,
    "id": "0167bd7a-8ca6-4dfe-ac34-66299043d3d0",
    "site": "wobbly immaculate pear",
  },
  {
    "entryTime": 2022-01-31T04:54:01.676Z,
    "id": "cd2d10b1-5fac-4808-bd6f-d3763e8bac55",
    "site": "tall trivial clause",
  },
  {
    "entryTime": 2022-02-01T06:30:14.756Z,
    "id": "a912a2ab-47cc-4385-8231-b4924d32879e",
    "site": "ample unused billboard",
  },
]
`;

exports[`Log entries service when listing log entries will sort log entries by "entryTime" in "desc" order 1`] = `
[
  {
    "entryTime": 2024-12-11T18:54:16.993Z,
    "id": "ed072537-423a-4d14-89b3-6851c9009eb7",
    "site": "humming past mathematics",
  },
  {
    "entryTime": 2024-12-10T00:43:52.099Z,
    "id": "14855a1f-5a9d-4904-83df-4dc9cb479b70",
    "site": "remarkable unique shoelace",
  },
  {
    "entryTime": 2024-12-09T16:29:49.763Z,
    "id": "7be7ad19-c083-4c28-8c87-6808d8f5bcfb",
    "site": "cluttered frizzy stylus",
  },
  {
    "entryTime": 2024-12-06T03:41:17.445Z,
    "id": "522e29a5-3a94-48ea-92a9-75bcb5e0dad7",
    "site": "wise gullible administrator",
  },
  {
    "entryTime": 2024-12-04T16:08:31.217Z,
    "id": "cfbe9a05-8fbd-46e9-a655-0083eebe5949",
    "site": "mild mixed crewman",
  },
  {
    "entryTime": 2024-12-03T21:32:56.266Z,
    "id": "f19a4a8e-5928-4bb6-8ee3-f980f1dea45e",
    "site": "deadly idealistic gerbil",
  },
  {
    "entryTime": 2024-11-30T04:40:35.930Z,
    "id": "217a32f7-c249-430a-8a5a-670a9d862c93",
    "site": "specific infinite chalice",
  },
  {
    "entryTime": 2024-11-25T16:47:07.828Z,
    "id": "7c998dd4-1203-4f46-ad6e-58621cc7451f",
    "site": "cruel wealthy lieu",
  },
  {
    "entryTime": 2024-11-23T11:30:43.580Z,
    "id": "3b71f0e9-7a09-4b0f-8a1d-55453fbca1d9",
    "site": "flamboyant old mate",
  },
  {
    "entryTime": 2024-11-21T19:33:18.695Z,
    "id": "266423f9-7824-4a59-80dc-7707bf3ff57d",
    "site": "exotic warmhearted aside",
  },
]
`;

exports[`Log entries service when listing recent dive sites will return a distinct list of the most recently used dive sites 1`] = `
[
  {
    "id": "c14340a8-858b-478e-8308-c800149777a7",
    "name": "damp forsaken chapter",
  },
  {
    "id": "74aa1202-9d61-443b-b8f5-44dde5ef18d5",
    "name": "exotic warmhearted aside",
  },
  {
    "id": "30d994f4-e4b6-41fe-9a47-8c11f263272b",
    "name": "frequent realistic paramedic",
  },
  {
    "id": "5f799498-2730-452f-b78b-933510c1174c",
    "name": "good-natured bountiful relay",
  },
  {
    "id": "f991d081-5092-4a31-a256-c1a1bd55aab5",
    "name": "humming past mathematics",
  },
  {
    "id": "0272ce1a-5715-4a42-a05a-86fdf63cc6ed",
    "name": "modern sorrowful girdle",
  },
  {
    "id": "6f7332db-9422-4c5b-a76d-06c4e602990a",
    "name": "remarkable unique shoelace",
  },
  {
    "id": "fac282b1-e048-4534-857c-dfef02ee9889",
    "name": "rude ajar aggradation",
  },
  {
    "id": "92c2d776-81fe-442f-ad63-dc83822deafe",
    "name": "specific infinite chalice",
  },
  {
    "id": "31564910-9f3d-45dc-b0c8-f836e7ff7b8d",
    "name": "spotless gifted gallon",
  },
  {
    "id": "b24146f0-08ed-47fc-8bb3-98371c2c2909",
    "name": "tattered rigid forever",
  },
  {
    "id": "0bf18d16-01a4-4e78-8c7f-4abf1b8e5e49",
    "name": "voluminous heartfelt imprisonment",
  },
]
`;

exports[`Log entries service when retrieving a single log entry will retrieve a log entry belonging to a specific user 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 64.7606461821124,
      "hePercent": undefined,
      "material": "fe",
      "name": "biodegradable announcement",
      "o2Percent": 35.6,
      "pressureUnit": "bar",
      "startPressure": 227.60948110138997,
      "volume": 15,
      "workingPressure": 182,
    },
  ],
  "conditions": {
    "airTemperature": 28.5,
    "bottomTemperature": undefined,
    "chop": 1.5,
    "current": 4.8,
    "surfaceTemperature": 11.3,
    "temperatureUnit": "C",
    "visibility": 4.8,
    "weather": undefined,
  },
  "createdAt": 2023-02-15T01:23:32.000Z,
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/725.jpg",
    "location": "Cape Coral",
    "logBookSharing": "private",
    "memberSince": 1648492241189,
    "name": "Johnnie Abernathy",
    "userId": "e0a5fab0-9484-4f54-a128-21d73552b08a",
    "username": "Reina54",
  },
  "depths": {
    "averageDepth": 13.832,
    "depthUnit": "m",
    "maxDepth": 17.29,
  },
  "equipment": {
    "boots": false,
    "camera": true,
    "exposureSuit": "3mm",
    "gloves": false,
    "hood": true,
    "scooter": undefined,
    "torch": true,
    "trimCorrectness": "kneesDown",
    "weight": 5.7,
    "weightCorrectness": "over",
    "weightUnit": "kg",
  },
  "id": "c2a96653-d5e7-47ec-98b8-9aa98989a9c7",
  "logNumber": 73,
  "notes": "Conicio tego adficio vito deripio cumque. Coaegresco synagoga aestus corroboro cibo explicabo. Desipio timor tendo terminatio vilitas universe aspicio triumphus.",
  "site": {
    "averageDifficulty": 2.89,
    "averageRating": 1.48,
    "createdOn": 1706002946453,
    "creator": {
      "accountTier": 0,
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/725.jpg",
      "location": "Cape Coral",
      "logBookSharing": "private",
      "memberSince": 1648492241189,
      "name": "Johnnie Abernathy",
      "userId": "e0a5fab0-9484-4f54-a128-21d73552b08a",
      "username": "Reina54",
    },
    "depth": {
      "depth": 10.58,
      "unit": "ft",
    },
    "description": "Adipiscor verus theologus chirographum cimentarius benigne tamquam occaecati corona. Tam verbum audacia. Aureus tolero acerbitas virgo impedit.",
    "directions": "Desidero apto colligo. Careo cado stips benigne demum ascisco atrox ocer magnam decumbo. Aegrotatio quo paens tenetur.",
    "freeToDive": true,
    "gps": {
      "lat": -2.7163,
      "lon": -96.1687,
    },
    "id": "791f3ca0-30b6-4637-b7a5-c2374515f2b3",
    "location": "Redlands",
    "name": "untrue sparse comics",
    "shoreAccess": undefined,
    "updatedOn": 1716794070481,
    "waterType": "mixed",
  },
  "tags": [],
  "timing": {
    "bottomTime": 4822,
    "duration": 5305,
    "entryTime": 1654916155958,
    "timezone": "Asia/Bishkek",
  },
  "updatedAt": undefined,
}
`;

exports[`Log entries service when retrieving a single log entry will return the requested log entry 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 64.7606461821124,
      "hePercent": undefined,
      "material": "fe",
      "name": "biodegradable announcement",
      "o2Percent": 35.6,
      "pressureUnit": "bar",
      "startPressure": 227.60948110138997,
      "volume": 15,
      "workingPressure": 182,
    },
  ],
  "conditions": {
    "airTemperature": 28.5,
    "bottomTemperature": undefined,
    "chop": 1.5,
    "current": 4.8,
    "surfaceTemperature": 11.3,
    "temperatureUnit": "C",
    "visibility": 4.8,
    "weather": undefined,
  },
  "createdAt": 2023-02-15T01:23:32.000Z,
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/725.jpg",
    "location": "Cape Coral",
    "logBookSharing": "private",
    "memberSince": 1648492241189,
    "name": "Johnnie Abernathy",
    "userId": "e0a5fab0-9484-4f54-a128-21d73552b08a",
    "username": "Reina54",
  },
  "depths": {
    "averageDepth": 13.832,
    "depthUnit": "m",
    "maxDepth": 17.29,
  },
  "equipment": {
    "boots": false,
    "camera": true,
    "exposureSuit": "3mm",
    "gloves": false,
    "hood": true,
    "scooter": undefined,
    "torch": true,
    "trimCorrectness": "kneesDown",
    "weight": 5.7,
    "weightCorrectness": "over",
    "weightUnit": "kg",
  },
  "id": "c2a96653-d5e7-47ec-98b8-9aa98989a9c7",
  "logNumber": 73,
  "notes": "Conicio tego adficio vito deripio cumque. Coaegresco synagoga aestus corroboro cibo explicabo. Desipio timor tendo terminatio vilitas universe aspicio triumphus.",
  "site": {
    "averageDifficulty": 2.89,
    "averageRating": 1.48,
    "createdOn": 1706002946453,
    "creator": {
      "accountTier": 0,
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/725.jpg",
      "location": "Cape Coral",
      "logBookSharing": "private",
      "memberSince": 1648492241189,
      "name": "Johnnie Abernathy",
      "userId": "e0a5fab0-9484-4f54-a128-21d73552b08a",
      "username": "Reina54",
    },
    "depth": {
      "depth": 10.58,
      "unit": "ft",
    },
    "description": "Adipiscor verus theologus chirographum cimentarius benigne tamquam occaecati corona. Tam verbum audacia. Aureus tolero acerbitas virgo impedit.",
    "directions": "Desidero apto colligo. Careo cado stips benigne demum ascisco atrox ocer magnam decumbo. Aegrotatio quo paens tenetur.",
    "freeToDive": true,
    "gps": {
      "lat": -2.7163,
      "lon": -96.1687,
    },
    "id": "791f3ca0-30b6-4637-b7a5-c2374515f2b3",
    "location": "Redlands",
    "name": "untrue sparse comics",
    "shoreAccess": undefined,
    "updatedOn": 1716794070481,
    "waterType": "mixed",
  },
  "tags": [],
  "timing": {
    "bottomTime": 4822,
    "duration": 5305,
    "entryTime": 1654916155958,
    "timezone": "Asia/Bishkek",
  },
  "updatedAt": undefined,
}
`;
